--- a/conf.yaml
+++ b/conf.yaml
@@ -9,3 +9,7 @@ mysql:
   host: 127.0.0.1
   port: 3306
   database: douyin2
+
+static:
+  root_path: ./public
+  default_cover_filename: default.jpg
